# rlm-runtime

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  test_quick.py
.github/workflows/: release.yml  tests.yml
docs/: GUIA-presentacion-monty.md  PARALLEL_SUBCALLS.md  PLAN-monty-integration.md
examples/: _azure_check.py  _debug_single_example.py  bench_repl_python_vs_monty.py  bench_rlm_repl_backends.py  cloud_example.py  complex_reasoning.py  gpt4_test.py  hybrid_audit.py  minimal.py  ollama_example.py  ollama_trace_compare.py  oolong_rlm_vs_baseline.py  oolong_three_way_benchmark.py  rich_repl_demo.py  rlm_vs_baseline.py  smart_router_demo.py
src/pyrlm_runtime/: __init__.py  cache.py  context.py  env.py  env_monty.py  events.py  policy.py  prompts.py  rich_trace.py  rlm.py  router.py  trace.py
src/pyrlm_runtime/adapters/: __init__.py  azure_openai.py  base.py  fake.py  generic_chat.py  openai_compat.py
tests/: test_adapters.py  test_context.py  test_env_monty.py  test_policy.py  test_repl.py  test_rich_trace.py  test_rlm_loop.py  test_router.py  test_trace.py
