[project]
name = "pyrlm-runtime"
version = "0.1.0"
description = "Minimal runtime for Recursive Language Models (RLMs)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Antonio Pena Batista", email = "apenab1995@gmail.com" }]
keywords = [
  "llm",
  "recursive-language-models",
  "rlm",
  "ai",
  "nlp",
  "large-language-models",
  "context-window",
  "reasoning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27", "python-dotenv>=1.0", "pydantic-monty>=0.0.4"]

[project.urls]
Homepage = "https://github.com/apenab/rlm-runtime"
Repository = "https://github.com/apenab/rlm-runtime"
Issues = "https://github.com/apenab/rlm-runtime/issues"

[dependency-groups]
dev = [
  "commitizen>=4.13.7",
  "pytest>=8.0",
  "ruff>=0.6.0",
  "ty>=0.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "src/pyrlm_runtime/__init__.py:__version__",
]
update_changelog_on_bump = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyrlm_runtime"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
